--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,37 @@ src/**/lib/*.jar
 # python specific
 *.pyc
 
+# node specific
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+.npm
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+dist/
+coverage/
+.nyc_output
+.env
+.env.local
+.env.*.local
+*.tsbuildinfo
+.eslintcache
+.parcel-cache
+.next
+.nuxt
+.vuepress/dist
+.serverless/
+.fusebox/
+.dynamodb/
+.tern-port
+.vscode-test
+
 # xcode/iphone specific
 build/*
 *.pbxuser
